# CoverBoy-C

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  cmake_install.cmake  conanfile.txt  dockcross  host-profile  main.cpp
.github/workflows/: build.yaml
debian/: changelog  config  control  copyright  coverboy.init  coverboy.service  postinst  rules  templates
debian/source/: lintian-overrides
src/: main.cpp
